samples/_failures_safe/1761191989_5d5c1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd99342b.c: In function ‘main’:
./samples/SAFE/__tmp_cd99342b.c:181:20: error: missing terminating " character
  181 |             printf("Processing complete. Type 'reset' to continue or 'quit
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cd99342b.c:181:13: error: expected expression at end of input
  181 |             printf("Processing complete. Type 'reset' to continue or 'quit
      |             ^~~~~~
./samples/SAFE/__tmp_cd99342b.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd99342b.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd99342b.c:181:13: error: expected declaration or statement at end of input
